# advent-of-code

./: .bazelrc  .gitignore  BUILD  README.md  WORKSPACE  deps.bzl
2017/01/: BUILD  Day01.cpp
2017/02/: BUILD  Day02.cpp
2017/03/: BUILD  Day03.cpp
2017/04/: BUILD  Day04.cpp
2017/05/: BUILD  Day05.cpp
2017/06/: BUILD  Day06.cpp
2017/07/: BUILD  Day07.cpp
2017/08/: BUILD  Day08.cpp
2017/09/: BUILD  Day09.cpp
2017/10/: BUILD  Day10.cpp  Hash.cpp  HashInternal.h
2017/11/: BUILD  Day11.cpp
2017/12/: BUILD  Day12.cpp
2017/13/: BUILD  Day13.cpp
2017/14/: BUILD  Day14.cpp
2017/15/: BUILD  Day15.cpp
2017/16/: BUILD  Day16.cpp
2017/17/: BUILD  Day17.cpp
2017/18/: BUILD  Day18.cpp
2017/19/: BUILD  Day19.cpp
2017/20/: BUILD  Day20.cpp
2017/21/: BUILD  Day21.cpp
2017/22/: BUILD  Day22.cpp
2017/23/: BUILD  Day23.cpp  day23.asm
2017/24/: BUILD  Day24.cpp
2017/25/: BUILD  Day25.cpp
2017/lib/: BUILD  Helpers.cpp  Helpers.h  Problems.h
2018/: .gitignore  go.mod
2018/01/: BUILD.bazel  README.md  main.go  main_test.go
2018/02/: BUILD.bazel  README.md  main.go  main_test.go
2018/03/: BUILD.bazel  README.md  main.go  main_test.go
2018/04/: BUILD.bazel  README.md  main.go  main_test.go
2018/05/: BUILD.bazel  README.md  main.go  main_test.go
2018/06/: BUILD.bazel  README.md  main.go  main_test.go
2018/07/: BUILD.bazel  README.md  main.go  main_test.go
2018/08/: BUILD.bazel  main.go  main_test.go  tree.txt
2018/09/: BUILD.bazel  main.go  main_test.go
2018/10/: BUILD.bazel  README.md  main.go  main_test.go
2018/11/: BUILD.bazel  README.md  main.go  main_test.go
2018/12/: BUILD.bazel  README.md  main.go  main_test.go
2018/13/: BUILD.bazel  README.md  main.go  main_test.go
2018/14/: BUILD.bazel  README.md  main.go  main_test.go
2018/15/: BUILD.bazel  README.md  main.go  main_test.go
2018/16/: BUILD.bazel  input2.txt  main.go  main_test.go
2018/17/: BUILD.bazel  main.go  main_test.go
2018/18/: BUILD.bazel  README.md  main.go  main_test.go
2018/19/: BUILD.bazel  README.md  main.go  main_test.go
2018/20/: BUILD.bazel  README.md  main.go  main_test.go
2018/21/: BUILD.bazel  README.md  main.go  main_test.go
2018/22/: BUILD.bazel  README.md  main.go  main_test.go
2018/23/: 23.py  BUILD.bazel  README.md  main.go  main_test.go
2018/24/: BUILD.bazel  README.md  main.go  main_test.go
2018/25/: BUILD.bazel  README.md  main.go  main_test.go
2018/template/: BUILD.bazel  main.go
2019/: go.mod
2019/01/: Advent of Code 2019 Day 1.xlsx  README.md  main.go
2019/02/: BUILD.bazel  README.md  main.go  main_test.go
2019/03/: BUILD.bazel  README.md  main.go  main_test.go
2019/04/: BUILD.bazel  README.md  main.go
2019/05/: BUILD.bazel  README.md  main.go
2019/06/: BUILD.bazel  README.md  main.go  main_test.go
2019/07/: BUILD.bazel  README.md  main.go  main_test.go
2019/08/: BUILD.bazel  README.md  main.go
2019/09/: BUILD.bazel  README.md  main.go
2019/10/: BUILD.bazel  README.md  main.go  main_test.go
2019/11/: BUILD.bazel  README.md  main.go
2019/12/: BUILD.bazel  README.md  main.go  main_test.go
2019/13/: BUILD.bazel  README.md  main.go  main_test.go
2019/14/: BUILD.bazel  README.md  main.go  main_test.go
2019/15/: BUILD.bazel  README.md  main.go
2019/16/: .gitignore  BUILD.bazel  README.md  main.go  main_test.go
2019/17/: BUILD.bazel  README.md  main.go  main_test.go  out.txt
2019/19/: BUILD.bazel  README.md  main.go  out.txt
2019/20/: BUILD.bazel  README.md  input.txt  main.go
2019/21/: BUILD.bazel  README.md  main.go
2019/22/: BUILD.bazel  README.md  main.go  main_test.go
2019/23/: BUILD.bazel  README.md  main.go
2019/24/: BUILD.bazel  README.md  main.go  main_test.go
2019/25/: BUILD.bazel  README.md  main.go
2019/aoc/: aoc_test.go  error.go  file-io.go  graph.go  math.go  path.go  sorting.go  strings.go  time.go
2019/intcode/: BUILD.bazel  computer.go  computer_test.go  fileIo.go  instructionSet.go  ioComponent.go
2019/lib/: BUILD.bazel  error.go  file-io.go  graph.go  math.go  path.go  strings.go  time.go
2020/: go.mod
2020/01/: BUILD.bazel  main.go  main_test.go
2020/02/: BUILD.bazel  main.go  main_test.go
2020/03/: BUILD.bazel  main.go  main_test.go
2020/04/: BUILD.bazel  main.go  main_test.go
2020/05/: BUILD.bazel  main.go  main_test.go
2020/06/: BUILD.bazel  main.go  main_test.go
2020/07/: BUILD.bazel  main.go
2020/08/: BUILD.bazel  main.go  main_test.go
2020/09/: BUILD.bazel  main.go  main_test.go
2020/10/: BUILD.bazel  main.go  main_test.go
2020/11/: BUILD.bazel  README.md  canonical.txt  main.go  main_test.go  output.txt
2020/12/: BUILD.bazel  main.go  main_test.go
2020/13/: BUILD.bazel  README.md  main.go  main_test.go
2020/14/: BUILD.bazel  main.go  main_test.go
2020/15/: BUILD.bazel  main.go  main_test.go
2020/16/: BUILD.bazel  main.go  main_test.go
2020/17/: BUILD.bazel  README.md  main.go  main_test.go
2020/18/: BUILD.bazel  main.go  main_test.go
2020/19/: BUILD.bazel  main.go  main_test.go
2020/20/: BUILD.bazel  main.go  main_test.go
2020/21/: BUILD.bazel  main.go  main_test.go
2020/22/: BUILD.bazel  main.go  main_test.go
2020/23/: BUILD.bazel  main.go  main_test.go
2020/24/: BUILD.bazel  main.go  main_test.go
2020/25/: BUILD.bazel  main.go  main_test.go
2020/cpu/: BUILD.bazel  computer.go  fileIo.go  instructionSet.go
2020/lib/: BUILD.bazel
2020/template/: BUILD.bazel  main.go  main_test.go
2021/: go.mod
2021/01/: BUILD.bazel  main.go  main_test.go
2021/03/: README.md
2021/04/: README.md
2021/06/: README.md
2021/07/: README.md
2021/08/: README.md
2021/09/: README.md
2021/10/: README.md
2021/11/: README.md
2021/12/: README.md
2021/13/: README.md
2021/14/: README.md
2021/15/: README.md
2021/16/: README.md
2021/17/: README.md
2021/18/: README.md
2021/19/: README.md
2022/: go.mod  go.sum  newDay.sh
2023/: newDay.sh
AdventOfCode2017/: AdventOfCode2017.sln
aoc/: direction.go  error.go  file-io.go  graph.go  math.go  permutation.go  strings.go  time.go
(+87 files in other folders)
