load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library", "go_test")

go_library(
    name = "template_lib",
    srcs = ["main.go"],
    importpath = "github.com/beckbria/advent-of-code/2018/template",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "template",
    embed = [":template_lib"],
    visibility = ["//visibility:public"],
)

go_test(
    name = "template_test",
    srcs = ["main_test.go"],
    embed = [":template_lib"],
    deps = ["@com_github_stretchr_testify//assert"],
)
