load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library", "go_test")

go_library(
    name = "03_lib",
    srcs = ["main.go"],
    data = ["input.txt"],
    importpath = "github.com/beckbria/advent-of-code/2019/03",
    visibility = ["//visibility:private"],
    deps = ["//2019/lib"],
)

go_binary(
    name = "03",
    embed = [":03_lib"],
    visibility = ["//visibility:public"],
)

go_test(
    name = "03_test",
    srcs = ["main_test.go"],
    embed = [":03_lib"],
    deps = ["@com_github_stretchr_testify//assert:go_default_library"],
)
