load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "04_lib",
    srcs = ["main.go"],
    importpath = "github.com/beckbria/advent-of-code/2019/04",
    visibility = ["//visibility:private"],
    deps = ["//2019/lib"],
)

go_binary(
    name = "04",
    embed = [":04_lib"],
    visibility = ["//visibility:public"],
)
