load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library", "go_test")

go_library(
    name = "10_lib",
    srcs = ["main.go"],
    data = ["input.txt"],
    importpath = "github.com/beckbria/advent-of-code/2019/10",
    visibility = ["//visibility:private"],
    deps = ["//2019/lib"],
)

go_binary(
    name = "10",
    embed = [":10_lib"],
    visibility = ["//visibility:public"],
)

go_test(
    name = "10_test",
    srcs = ["main_test.go"],
    embed = [":10_lib"],
    deps = [
        "//2019/lib",
        "@com_github_stretchr_testify//assert:go_default_library",
    ],
)
