load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "13_lib",
    srcs = ["main.go"],
    data = ["input.txt"],
    importpath = "github.com/beckbria/advent-of-code/2019/13",
    visibility = ["//visibility:private"],
    deps = [
        "//2019/intcode",
        "//2019/lib",
    ],
)

go_binary(
    name = "13",
    embed = [":13_lib"],
    visibility = ["//visibility:public"],
)
