load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library", "go_test")

go_library(
    name = "01_lib",
    srcs = ["main.go"],
    data = ["input.txt"],
    importpath = "github.com/beckbria/advent-of-code/2020/01",
    visibility = ["//visibility:private"],
    deps = ["//2020/lib"],
)

go_binary(
    name = "01",
    embed = [":01_lib"],
    visibility = ["//visibility:public"],
)

go_test(
    name = "01_test",
    srcs = ["main_test.go"],
    embed = [":01_lib"],
    deps = [
        "//2020/lib",
        "@com_github_stretchr_testify//assert:go_default_library",
    ],
)
