load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library", "go_test")

go_library(
    name = "04_lib",
    srcs = ["main.go"],
    data = ["input.txt"],
    importpath = "github.com/beckbria/advent-of-code/2020/04",
    visibility = ["//visibility:private"],
    deps = ["//2020/lib"],
)

go_binary(
    name = "04",
    embed = [":04_lib"],
    visibility = ["//visibility:public"],
)

go_test(
    name = "04_test",
    srcs = ["main_test.go"],
    embed = [":04_lib"],
    deps = ["@com_github_stretchr_testify//assert:go_default_library"],
)
