load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "08_lib",
    srcs = ["main.go"],
    data = ["input.txt"],
    importpath = "github.com/beckbria/advent-of-code/2020/08",
    visibility = ["//visibility:private"],
    deps = [
        "//2020/cpu",
        "//2020/lib",
    ],
)

go_binary(
    name = "08",
    embed = [":08_lib"],
    visibility = ["//visibility:public"],
)
