load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library", "go_test")

go_library(
    name = "25_lib",
    srcs = ["main.go"],
    importpath = "github.com/beckbria/advent-of-code/2020/25",
    visibility = ["//visibility:private"],
    deps = ["//2020/lib"],
)

go_binary(
    name = "25",
    embed = [":25_lib"],
    visibility = ["//visibility:public"],
)

go_test(
    name = "25_test",
    srcs = ["main_test.go"],
    embed = [":25_lib"],
    deps = ["@com_github_stretchr_testify//assert:go_default_library"],
)
